--- a/config.yaml
+++ b/config.yaml
@@ -18,10 +18,10 @@ menu:
       url: /about/
       weight: 1
     - name: GitHub
-      url: https://github.com/rstudio/blogdown
+      url: https://github.com/tor-gu
       weight: 2
     - name: Twitter
-      url: https://twitter.com/rstudio
+      url: https://twitter.com/tor__gu
       weight: 3
     - name: LinkedIn
       url: https://www.linkedin.com/in/tor-gunston-857077165
