--- a/config.yaml
+++ b/config.yaml
@@ -17,15 +17,18 @@ menu:
     - name: About
       url: /about/
       weight: 1
+    - name: Projects
+      url: /projects/
+      weight: 2
     - name: GitHub
       url: https://github.com/tor-gu
-      weight: 2
+      weight: 3
     - name: Twitter
       url: https://twitter.com/tor__gu
-      weight: 3
+      weight: 4
     - name: LinkedIn
       url: https://www.linkedin.com/in/tor-gunston-857077165
-      weight: 4
+      weight: 5
 params:
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
